--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,8 +14,10 @@
   <!-- include source files here... -->
   <script src="src/Bowling.js"></script>
 
+
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
+  <script src="spec/BowlingSpec.js"></script>
 
 </head>
 
